# agent-notify

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  SPEC.md
crates/notify-cli/: Cargo.toml
crates/notify-cli/src/: main.rs
crates/notify-core/: Cargo.toml
crates/notify-core/src/: config.rs  error.rs  lib.rs  message.rs  output.rs  provider.rs
crates/notify-core/src/provider/: common.rs  discord.rs  file_log.rs  gotify.rs  mod.rs  ntfy.rs  pushover.rs  slack.rs  telegram.rs  webhook.rs
docs/: webhook-v1.md
examples/: notify.env.example  notify.toml
skills/notification/: SKILL.md  examples.md
