[workspace]
members = [
    "crates/notify-cli",
    "crates/notify-core",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
hostname = "0.4"
mime_guess = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
ulid = { version = "1", features = ["serde"] }
