[workspace]
members = [
    "crates/notify-cli",
    "crates/notify-core",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
description = "A multi-channel notification CLI for AI agents and automation scripts."
repository = "https://github.com/neuwcodebox/agent-notify"
homepage = "https://github.com/neuwcodebox/agent-notify"
keywords = ["notify", "notification", "cli", "automation", "agent"]
categories = ["command-line-utilities"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
hostname = "0.4"
mime_guess = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
ulid = { version = "1", features = ["serde"] }
