[package]
name = "notify-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
hostname.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
