[package]
name = "agent-notify-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description = "Core notification config and provider implementation for agent-notify."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "notify_core"
path = "src/lib.rs"

[dependencies]
dirs.workspace = true
hostname.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
